BJS2-47260 API 2ч Изменены collect(Collectors.toList() на toList()